--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,11 @@
-/* @font-face {
+@font-face {
     font-family: BabyBloc;
-    src: url(./fonts/WaveBlocks-Regular.ttf);
+    src: url(/src/fonts/WaveBlocks-Regular.ttf);
 }
 @font-face {
     font-family: ToyBlocks ;
-    src: url(./fonts/K26ToyBlocks123.ttf);
+    src: url(/src/fonts/K26ToyBlocks123.ttf);
+    
 }
 
 h1{
@@ -35,7 +36,7 @@ h1{
     background-color:skyblue;
     border: 4px solid black;
     font-size: 2.3em;
-    top:40%;
+    top:42%;
     left: 60%;
    
     
@@ -51,11 +52,7 @@ h1{
     color:white;
     background-color:lightgreen;
     border: 4px solid black;
-    font-size: 2.3em;
-    
-
-    
-    
+    font-size: 2.0em; 
     
 }  
 .screen {
@@ -66,16 +63,13 @@ h1{
     left: 0;
     right:0;
     width:1000px; 
-    height:600px; 
-    
-     
-       
+    height:600px;       
        
 } 
 
 .instructions {
     border: double black 4px; 
-    height: 110px; 
+    height: 90px; 
     width: 100%;
     border-radius: 25px;
     padding-left: 20px;
@@ -88,7 +82,7 @@ h1{
 }
  ul{
     font-family: sans-serif;
-    font-size: small;
+    font-size: x-small;
     color: black;
     padding: 0px;
     top: 0px;
@@ -111,6 +105,20 @@ h1{
   
 
 }
+#navBar{
+    position: absolute ;
+    display: block;
+    top: 25%;
+    bottom: 0;
+    left: 5%;
+    right: 0;
+    font-size: large;
+    font-family: BabyBloc;
+   
+
+    
+
+}
 
 
 p{
@@ -123,6 +131,6 @@ p{
     left: 65%
   }
   
- */
+
 
  
